fix text alignment in How It Works

--- a/client/src/components/HowItWorks/HowItWorks.scss
+++ b/client/src/components/HowItWorks/HowItWorks.scss
@@ -20,7 +20,7 @@
       .guide-image-container {
         display: flex;
         align-items: center;
-        height: 300px;
+        height: 350px;
 
         img.guide-image {
           max-width: 300px;
@@ -28,11 +28,14 @@
       }
 
       .guide-description {
+        text-align: left;
+        max-width: 400px;
         padding: 0 20px;
 
         .description-title {
           font-size: 1.25rem;
           margin-top: 10px;
+          text-align: center;
         }
       }
 
